# proxima-generator

./: .gitignore  .project  Generator.cabal  cabal.config  cabal.project.freeze  proxima-generator.cabal
src/: Gen_DocTypes.hs  Gen_DocUtils.hs  Main.hs  Parser.hs  TypesUtils.hs
