name: proxima-generator
version: 0.1
cabal-version: -any
license: AllRightsReserved
copyright:
maintainer:
stability:
build-type: Simple
homepage:
package-url:
synopsis:
description:
category:
author:
data-files:
extra-source-files:
extra-tmp-files:

executable: proxima-generator
build-depends: base       >=4.9 && <4.10,
               containers >=0.5 && <0.6,
               parsec     >=3.1 && <3.2

main-is: Main.hs
buildable: True
cc-options:
ld-options:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: Gen_DocTypes Gen_DocUtils Gen_DocumentEdit
               Gen_PresentationAG Gen_ProxParser Main Parser TypesUtils
ghc-prof-options:
ghc-options:
