cabal-version: 3.6
name: proxima-generator
version: 0.1
license: MIT
copyright:
maintainer:
stability:
build-type: Simple
homepage:
package-url:
synopsis:
description:
category:
author:

executable proxima-generator
  build-depends: base,
                 containers,
                 parsec

  main-is: Main.hs
  buildable: True
  hs-source-dirs: src
  other-modules: Gen_DocTypes Gen_DocUtils Gen_DocumentEdit
                 Gen_PresentationAG Gen_ProxParser Parser TypesUtils
